k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agrosolutions
  labels:
    name: agrosolutions
    environment: production
